--- a/kobuki_description/CMakeLists.txt
+++ b/kobuki_description/CMakeLists.txt
@@ -1,33 +1,20 @@
-##############################################################################
-# Cmake
-##############################################################################
-
 cmake_minimum_required(VERSION 3.5)
 project(kobuki_description)
 
-##############################################################################
-# Ament
-##############################################################################
-
-find_package(ament_cmake)
-
-##############################################################################
-# Installs
-##############################################################################
+find_package(ament_cmake REQUIRED)
 
 install(DIRECTORY launch
-        DESTINATION share
-       )
-
-install(DIRECTORY launch
-        DESTINATION share
-       )
-
+  DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY meshes
-        DESTINATION share
-       )
-
+  DESTINATION share/${PROJECT_NAME})
 install(DIRECTORY rviz
-        DESTINATION share
-       )
+  DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY urdf
+  DESTINATION share/${PROJECT_NAME})
 
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+ament_package()
