--- a/kobuki_description/package.xml
+++ b/kobuki_description/package.xml
@@ -18,10 +18,9 @@
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_description</url>
 
-  <build_depend>urdf</build_depend>
-  <build_depend>xacro</build_depend>
-
-  <!-- <exec_depend>xacro</exec_depend> -->
+  <exec_depend>urdf</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>urdf</exec_depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
