--- a/kobuki_description/package.xml
+++ b/kobuki_description/package.xml
@@ -4,15 +4,14 @@
   <version>0.7.6</version>
   <description>
       Description of the Kobuki model.
-
-      Provides the model description of Kobuki for simulation and visualisation. The files in this
+      Provides the model description of Kobuki for simulation and visualisation. The files in this 
       package are parsed and used by a variety of other components. Most users will not interact directly
       with this package.
   </description>
-  <author>Daniel Stonier</author>
-  <author>Marcus Liebhardt</author>
-  <author>Younghun Ju</author>
-  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
+  <author email="d.stonier@gmail.com">Daniel Stonier</author>
+  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
+  <author email="yhju@yujinrobot.com">Younghun Ju</author>
+  <maintainer email="yhju@yujinrobot.com">Younghun Ju</maintainer>
   <license>BSD</license>
   <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
